--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div class="box1Con">
         <div class="container text-center">
                 <img src="assets/oQQur_white.png" alt="mianLogo">
-            <h1>welcomes you</h1>
-            <p>"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, maxime."</p>
+            <h1>Experience the world through other people’s eyes. Live. In VR.</h1>
+            <p>"Live 360 degree  streaming platform where the you can operate the broadcaster through cities, shops or events similar to a game in real time. "</p>
             <!-- Begin Mailchimp Signup Form -->
             <div id="mc_embed_signup">
                 <form action="https://gmail.us3.list-manage.com/subscribe/post?u=2c8edbdc5239efcf2bca59162&amp;id=96d42a98cf"
@@ -67,8 +67,7 @@
             <img src="assets/YC_Startup_School_logo.png" alt="mainLogoBlack" width="400px">
         </div>
         <div class="col-lg-6 col-md-6 contact">
-            <h2>Contact Us: </h2>
-            <a href="mailto:alex@oqqur.com"><i class="fas fa-envelope"></i>&nbsp;&nbsp;alex@oqqur.com</a>
+            <a href="mailto:alex@oqqur.com"><i class="fas fa-envelope"></i>&nbsp;&nbsp;Contact Us</a>
         </div>
     </div>
     
