--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <div class="mc-field-group">
                             <label for="mce-EMAIL"></label>
                             <input type="email" value="" placeholder="Email" name="EMAIL" class="required email" id="mce-EMAIL">
-                            &nbsp;<input type="submit" class="button" value="Watch oQQur!" name="subscribe" id="mc-embedded-subscribe" >
+                            &nbsp;<input type="submit" class="button" value="Watch oQQur" name="subscribe" id="mc-embedded-subscribe" >
                             &nbsp;<a class="button buttonStream" target="_blank" href="https://airtable.com/shr8DlneK6jiTsevH">Become a Streamer</a>
                         </div>
                         <div id="mce-responses" class="clear">
