--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
 <div class="box1">
 
     <!-- video File and Controls -->
-    <video src="assets/musicVideo.mp4" autoplay loop muted type="video/mp4">
+    <video src="assets/musicVideo.mp4"  loop autoplay playinline muted type="video/mp4" id="myVideo">
     </video>
-
 
     <!-- header Content Goes here -->
     <div class="box1Con">
         <div class="container text-center">
                 <img src="assets/oQQur_white.png" alt="mianLogo">
             <h1>Experience the world through other people’s eyes. Live. In VR.</h1>
-            <p>Live 360 degree  streaming platform where the you can operate the broadcaster through cities, shops or events similar to a game in real time.</p>
+           <!--   <p>Live 360 degree  streaming platform where the you can operate the broadcaster through cities, shops or events similar to a game in real time.</p>
             <!-- Begin Mailchimp Signup Form -->
             <div id="mc_embed_signup">
                 <form action="https://gmail.us3.list-manage.com/subscribe/post?u=2c8edbdc5239efcf2bca59162&amp;id=96d42a98cf"
