--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="box1Con">
         <div class="container text-center">
                 <img src="assets/oQQur_white.png" alt="mianLogo">
-            <h1>Experience the world through other people’s eyes. Live. In VR.</h1> <br> <br> <br> <br>
+            <h1>Experience the world through other people’s eyes. Live. In 360.</h1> <br> <br> <br> <br>
            <!--   <p>Live 360 degree  streaming platform where the you can operate the broadcaster through cities, shops or events similar to a game in real time.</p> -->
             <!-- Begin Mailchimp Signup Form -->
             <div id="mc_embed_signup">
